--- a/config.yml
+++ b/config.yml
@@ -14,12 +14,12 @@ tau: 0.05
 lambda_grid: [0.001, 0.01, 0.1, 1, 10]
 
 # Bootstrap (set to 0 for scalar SD network, or >0 for stochastic dominance with bootstrapping)
-bootstrap: 0
+bootstrap: 100
 
 # Network centrality/factor construction
-centrality_metric: eigenvector    # 'in_degree', 'out_degree', 'pagerank', or 'eigenvector'
-factor_high: 3                   # Number of assets in High-centrality portfolio
-factor_low: 3                    # Number of assets in Low-centrality portfolio
+centrality_metric: eigenvector    # 'indegree', 'outdegree', 'pagerank', or 'eigenvector'
+factor_high: 1                   # Number of assets in High-centrality portfolio
+factor_low: 1                    # Number of assets in Low-centrality portfolio
 
 # Output locations
 lambda_outputs: outputs/lambda_estimates.csv
@@ -28,4 +28,7 @@ centrality_outputs: outputs/centralities.csv
 factor_output: outputs/NetworkRisk.csv
 
 # Regression/factor test settings
-regression_window: 60            # Number of rolling periods for factor regressions (optional)
+regression_window: 30            # Number of rolling periods for factor regressions (optional)
+
+
+n_jobs: 8
